<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".CreditsActivity">

    <TextView
        android:id="@+id/developers"
        android:layout_width="226dp"
        android:layout_height="52dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="114dp"
        android:gravity="center"
        android:text="@string/Developers"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ImmortalIdiotTextView"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="98dp"
        android:gravity="center"
        android:onClick="telegramImmortalIdiot"
        android:text="@string/ImmortalIdiot"
        android:textColor="@color/red"
        android:textColorLink="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developers" />

    <TextView
        android:id="@+id/Suomi555TextView"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="98dp"
        android:gravity="center"
        android:onClick="telegramSuomi"
        android:text="@string/Suomi555"
        android:textColor="@color/red"
        android:textColorLink="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImmortalIdiotTextView" />

    <TextView
        android:id="@+id/TanyyaakoTextView"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="98dp"
        android:gravity="center"
        android:onClick="telegramTanyyaako"
        android:text="@string/Tanyyaako"
        android:textColor="@color/red"
        android:textColorLink="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Suomi555TextView" />

    <TextView
        android:id="@+id/AlexanderGorodnikovTextView"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="98dp"
        android:gravity="center"
        android:onClick="telegramAlexanderGorodnikov"
        android:text="@string/AlexanderGorodnikov"
        android:textColor="@color/red"
        android:textColorLink="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidance" />

    <TextView
        android:id="@+id/guidance"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/Guidance"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Suomi555TextView" />

    <Button
        android:id="@+id/goBackCreditsActivity"
        android:layout_width="201dp"
        android:layout_height="68dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="105dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:onClick="goBack"
        android:text="@string/GoBack"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlexanderGorodnikovTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>