<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/exit_button"
        android:layout_width="155sp"
        android:layout_height="59sp"
        android:layout_marginStart="105sp"
        android:layout_marginTop="184sp"
        android:layout_marginEnd="105sp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:onClick="showExitHint"
        android:text="@string/Exit"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="201sp"
        android:layout_height="68sp"
        android:layout_marginStart="105sp"
        android:layout_marginTop="300sp"
        android:layout_marginEnd="105sp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:onClick="switchToCameraActivity"
        android:text="@string/Start"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dev_button"
        android:layout_width="201sp"
        android:layout_height="68sp"
        android:layout_marginStart="105sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="105sp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif"
        android:onClick="switchToCreditsActivity"
        android:text="@string/Credits"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />
</androidx.constraintlayout.widget.ConstraintLayout>